--- a/Client/src/pages/Formulario/Form.css
+++ b/Client/src/pages/Formulario/Form.css
@@ -5,27 +5,41 @@
     justify-content:space-around;
     align-items: center;
     margin-top: 1rem;
+    background-color: #4a148c;
+    color: #424242;
+    min-height: 100vh;
+    min-width: 100vw;
+    margin-top:0;
 }
 
 
 .container-card{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border:2px solid rgb(70, 66, 71);
     border-radius: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
+
     padding:1rem;
+    background-color:white;
+    color:#424242;
 
 }
 .title{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     font-size: x-large;
-    color: gray
+    background-color: white;
+/*     border: 2px solid rgb(70, 66, 71);
+    border-radius: 8px; */
+    width: 25rem;
+    height: 4rem;
+    font-weight: 900;
+   
 
 }
 
@@ -71,11 +85,12 @@
 
 
 .container-sex{
-    display: flex;
+   /*  display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
     gap: 2px;
+    margin-bottom:1px
 }
 .inputSelector{
     border: 1px solid grey;
@@ -90,7 +105,7 @@
 
 .botonStyle{
    /*  border: 1px solid darkorchid; */
-     background-color:rgb(56, 56, 213); 
+    background-color:rgb(56, 56, 213); 
    color:white;
     border-radius: 8px;
     width: 25rem;
@@ -138,5 +153,6 @@
     /* centrar el texto */
     margin-top: 0px;
     /* agregar un poco de espacio encima del texto */
-    border-radius: 10px;
+    border-radius: 20px;
+
 }
