--- a/Client/src/pages/Formulario/Form.css
+++ b/Client/src/pages/Formulario/Form.css
@@ -43,14 +43,14 @@
 
 }
 
-.inputStyle{
-    border:1px solid grey;
-    border-radius: 8px;
-    width: 25rem;
-    height: 2.5rem;
-    margin:4px ;
-    text-align: center;
+.text{
+ text-align: center;
+ font-weight: 600;
+ font-size: small;
+
 }
+
+
 
 .container2{
     display: flex;
@@ -61,19 +61,20 @@
     border-radius: 2px;  */
     width: 25rem;
     height: 4rem;
-    margin: 2px;
-    padding: 4px;
+ /*    margin: 2px;
+    padding: 2px; */
 }
 
 
-.input2{
+.inputStyle {
     border: 1px solid grey;
-    border-radius: 5px;
-    width: 4rem;
-    height: 2rem;
-    margin: 2px;
-    text-align: center; 
+    border-radius: 8px;
+    width: 25rem;
+    height: 2.5rem;
+    margin: 4px;
+    text-align: center;
 }
+
 .inputStyleArea{
     border:1px solid grey;
     border-radius: 4px;
@@ -84,26 +85,69 @@
 }
 
 
-.container-sex{
-   /*  display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center; */
-    gap: 2px;
-    margin-bottom:1px
-}
+
 .inputSelector{
     border: 1px solid grey;
     border-radius: 5px;
-    width:  12rem;
+    width:  8.5rem;
     height: 2rem;
     margin: 2px;
     text-align: center;
     cursor: pointer;
-    padding: 2px;
-    background-color:#eeeeee
+    padding: 1px;
+    background-color:#f5f5f5
 }
 
+
+
+/* el container3 esta dentro del container2 */
+.container3{
+    display: flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+    /*  border: 1px solid grey;
+    border-radius: 2px;  */
+    width: 15rem;
+    height: 4rem;
+    margin: 1px;
+    padding: 1px;
+    gap:0.5rem 
+
+}
+
+
+
+
+.input2 {
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 5rem;
+    height: 2rem;
+    margin: 2px;
+    text-align: center;
+}
+.inputSelector2{
+    margin-top: 0rem; 
+    border: 1px solid grey;
+    border-radius: 5px;
+    width:  5rem;
+    height: 2rem;
+ /*    margin: 0 0 8px 0;   */
+    text-align: center;
+    cursor: pointer;
+    padding: 2px; 
+    background-color:#f5f5f5
+}
+
+.container-sex {
+    /*  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; */
+    gap: 2px;
+    margin-bottom: 1px
+}
 .inputSelector option:hover,
 .inputSelector option:focus {
     background-color: #ccc !important;
@@ -113,7 +157,7 @@
 
 .botonStyle{
    /*  border: 1px solid darkorchid; */
-    background-color:rgb(56, 56, 213); 
+    background-color:#01579b;
    color:white;
     border-radius: 8px;
     width: 25rem;
@@ -155,7 +199,7 @@
     /* un color rojo oscuro para el texto */
     font-size: 12px;
     /* tamaño de fuente pequeño */
-    padding: 5px;
+    padding: 3px;
     /* agregar un poco de espacio alrededor del texto */
     text-align: center;
     /* centrar el texto */
