add redux al form products

--- a/Client/src/pages/Formulario/Form.css
+++ b/Client/src/pages/Formulario/Form.css
@@ -5,8 +5,13 @@
     justify-content:space-around;
     align-items: center;
     margin-top: 1rem;
-     background-color: #4a148c;     
+     background-color: rgb(124 58 237);; 
+    
      color: #424242; 
+    /*  background-image: url("../../assets/imagesProduct/form1.jpg");
+     background-position:center;
+     background-repeat: no-repeat;
+     background-size: cover; */
     min-height: 100vh;
     min-width: 100vw;
     margin-top:0;
@@ -18,13 +23,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border:2px solid rgb(70, 66, 71);
+    border:2px solid #3e2723;
     border-radius: 10px;
     display: flex;
-
     padding:1rem;
     background-color:white;
-    color:#424242;
+     color:#424242;
+    opacity: 0.90;
 
 }
 .title{
@@ -34,6 +39,7 @@
     align-items: center; 
     font-size: x-large;
     background-color: white;
+    /* color:#3e2723; */
 /*     border: 2px solid rgb(70, 66, 71);
     border-radius: 8px; */
     width: 25rem;
@@ -117,8 +123,6 @@
 }
 
 
-
-
 .input2 {
     border: 1px solid grey;
     border-radius: 5px;
@@ -157,7 +161,7 @@
 
 .botonStyle{
    /*  border: 1px solid darkorchid; */
-    background-color:#01579b;
+    background-color:black;
    color:white;
     border-radius: 8px;
     width: 25rem;
@@ -166,8 +170,8 @@
     cursor: pointer;
 }
 .botonStyle:active{
-        background-color: rgb(56, 56, 213);;
-        color:black;
+        background-color:#01579b;
+        color:white;
         border: 2px solid black;
 }
 
@@ -188,7 +192,8 @@
 }
 
 .inputStyleImage:active {
-    background-color: darkorchid;
+    background-color: black;
+    color:white;
 }
 
 
@@ -207,4 +212,8 @@
     /* agregar un poco de espacio encima del texto */
     border-radius: 20px;
 
+}
+
+.index_boton{
+    z-index: 99999;
 }
