--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -33,3 +33,19 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+.custom-scrollbar::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #4b044e;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #33012d;
+    border-radius: 20px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #550734;
+  }
