--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -24,6 +24,8 @@ body {
   color: var(--gray-900);
   word-wrap: break-word;
   font-family: "League Spartan", "Open Sans", Gill Sans, Calibri, sans-serif;
+
+  overflow-x: hidden;
 }
 
 * {
